force-app/main/default/objects/Application__c/fields/App_Number__c.field-meta.xml
<CustomField>
    <fullName>App_Number__c</fullName>
    <displayFormat>A-{0000}</displayFormat>
    <label>App Number</label>
    <type>AutoNumber</type>
</CustomField>