force-app/main/default/objects/Application__c/fields/Total_Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Loan_Amount__c</fullName>
    <label>Total Loan Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>